--- a/style.css
+++ b/style.css
@@ -23,13 +23,34 @@ li{
     width: 250px;
 }
 
-.nav{
+
+
+.nav {
     background-color: azure;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
 
-@media (min-width: 700)
-{
-    main{
-        margin-top: 20%;
-    }
+.tab-content {
+    padding-top: 50px; /* Adjust for the fixed navbar */
+}
+
+.container {
+    padding-top: 100px; /* Adjust for the fixed navbar */
+}
+
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
